sprint1/nivell_1/css/styles.css
*,
*:before,
*:after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
} 

body {
    margin: 0 auto;
    max-width: 75em;
}

header, 
main, 
footer {
    margin: 1em;
    border: 0.25em solid hsl(0, 0%, 0%);
}

.header-sup {
    display: flex;
    gap: 1em;
    padding: 1em;
    border-bottom: 0.125em solid hsl(0, 0%, 0%);
    background-color: hsl(215, 34%, 31%);
}

.logo,
.header-sup nav,
.social {
    flex: 1;
    height: 1em;
    background-color: hsl(9, 100%, 64%);
}

.header-sup nav {
    flex: 4;
}

.header-inf {
    padding: 1em;
    background-color:hsl(36, 89%, 51%);
}

.hero {
    height: 1em;
    background-color:hsl(59, 87%, 47%);
}

main{
    display: flex;
}
/* .............................................. */
.main-articles {
    display: flex;  
    flex-wrap: wrap;
    justify-content: space-evenly;
    padding: 1em;
    gap: 1em;
    border-right: 0.25em solid hsl(0, 0%, 0%);
    background-color: hsl(218, 26%, 33%);
}

.main-articles article,
.main-articles p  {
    width: 20em;
    height: 2em;    
    background-color: hsl(218, 93%, 70%)
}

.main-articles p {
    flex-grow: 1;
}
/* .............................................. */
aside {
    display: flex;
    flex-direction: column;
    gap: 1em;
    padding: 1em;
    background-color: hsl(9, 100%, 64%);
}

aside p {   
    width: 20em;
    height: 2em; 
    background-color: hsl(59, 97%, 74%); 
}

footer {
    padding: 1em;
    background-color:hsl(44, 78%, 51%);
}

